# AoC2024

./: LICENSE  README.md
01/: flake.nix  project.cabal
01/src/: Main.hs
02/src/: Main.hs
03/src/: Main.hs
04/src/: Main.hs
05/src/: Main.hs
06/: README.md  flake.nix  project.cabal
06/src/: Main.hs
07/: README.md  flake.nix
07/src/: Main.hs
08/: flake.nix  project.cabal
08/src/: Main.hs
09/: project.cabal
09/src/: Main.hs
10/: flake.nix  project.cabal
10/src/: Main.hs
11/: README.md  flake.nix  project.cabal
11/src/: Main.hs
12/src/: Main.hs
13/src/: Main.hs
14/src/: Main.hs
15/src/: Main.hs
16/: flake.nix  project.cabal
16/src/: Main.hs
19/: flake.nix  lecture.hs  project.cabal
