cabal-version:   3.0
name:            project
version:         0.1.0
license:         MIT
author:          Fabian Grubmüller
maintainer:      @flgrubm
build-type:      Simple

common warnings
    ghc-options: -Wall

executable example
    import:           warnings
    main-is:          Main.hs
    build-depends:    base, matrix, mtl
    hs-source-dirs:   src
    default-language: Haskell2010
